--- a/src/TumblThree/TumblThree.Presentation/Views/ManagerView.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Views/ManagerView.xaml
@@ -19,7 +19,7 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <DataGrid x:Name="blogFilesGrid" ItemsSource="{Binding ManagerService.BlogFiles}"
+        <DataGrid x:Name="blogFilesGrid" ItemsSource="{Binding ManagerService.BlogFilesView}"
                   ctrl:DataGridHideColumns.CanUserHideColumns="True"
                   SelectedItem="{Binding SelectedBlogFile}" CanUserReorderColumns="True" BorderBrush="White"
                   BorderThickness="0,1,0,0"
@@ -183,6 +183,20 @@
                 <DataGridTextColumn x:Name="Notes" Header="{x:Static p:Resources.Notes}"
                                     Binding="{Binding Notes, Mode=TwoWay}"
                                     IsReadOnly="False" Width="120" ElementStyle="{StaticResource TextCellElementStyle}" />
+                <DataGridTemplateColumn x:Name="Collection" Header="{x:Static p:Resources.Collection}" Width="100">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <TextBlock>
+                                <TextBlock.Text>
+                                    <MultiBinding Converter="{StaticResource CollectionMultiConverter}">
+                                        <Binding Path="CollectionId" />
+                                        <Binding Path="DataContext.ShellService.Settings.Collections" ElementName="blogFilesGrid" />
+                                    </MultiBinding>
+                                </TextBlock.Text>
+                            </TextBlock>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
 
