--- a/src/TumblThree/TumblThree.Presentation/Views/DetailsViews/DetailsTumblrTagSearchView.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Views/DetailsViews/DetailsTumblrTagSearchView.xaml
@@ -232,6 +232,7 @@
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition Height="{StaticResource Layout.RowSpace}" />
                                 <RowDefinition Height="Auto" />
+                                <RowDefinition Height="{StaticResource Layout.RowSpace}"/>
                                 <RowDefinition Height="{StaticResource Layout.RowSpace}" />
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition Height="{StaticResource Layout.RowSpace}" />
@@ -481,9 +482,39 @@
                                     </ToolTip>
                                 </TextBox.ToolTip>
                             </TextBox>
-                            
+
+
+                            <Label Content="{x:Static p:Resources.Collection}" Grid.Column="0" Grid.Row="12"
+                                  Margin="3,0,0,0" Padding="3,0,0,0">
+                                <Label.ToolTip>
+                                    <ToolTip>
+                                        <StackPanel>
+                                            <TextBlock FontWeight="Bold" Text="{x:Static p:Resources.ToolTipCollection}" />
+                                            <TextBlock xml:space="preserve"
+                                                   Text="{x:Static p:Resources.ToolTipCollectionDescription}" />
+                                        </StackPanel>
+                                    </ToolTip>
+                                </Label.ToolTip>
+                            </Label>
+
+                            <ComboBox Grid.Column="1" Grid.Row="12" Padding="5,0,5,0"
+                                      ItemsSource="{Binding Collections, Mode=OneWay}"
+                                      SelectedValue="{Binding BlogFile.CollectionId, Mode=TwoWay}"
+                                      DisplayMemberPath="Name" SelectedValuePath="Id" Height="18"
+                                      SelectionChanged="Collection_SelectionChanged">
+                                <ComboBox.ToolTip>
+                                    <ToolTip>
+                                        <StackPanel>
+                                            <TextBlock FontWeight="Bold" Text="{x:Static p:Resources.ToolTipCollection}" />
+                                            <TextBlock xml:space="preserve"
+                                                   Text="{x:Static p:Resources.ToolTipCollectionDescription}" />
+                                        </StackPanel>
+                                    </ToolTip>
+                                </ComboBox.ToolTip>
+                            </ComboBox>
+
                             <CheckBox
-                                Grid.Row="14"
+                                Grid.Row="15"
                                 Grid.Column="0"
                                 Grid.ColumnSpan="5"
                                 Margin="3,0,0,0"
@@ -492,7 +523,7 @@
                                 IsChecked="{Binding BlogFile.SkipGif, Mode=TwoWay}" />
 
                             <CheckBox Content="{x:Static p:Resources.GroupPhotoSets}" IsChecked="{Binding BlogFile.GroupPhotoSets, Mode=TwoWay}"
-                                Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="16" Margin="3,0,0,0" Padding="3,0,0,0" />
+                                Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="17" Margin="3,0,0,0" Padding="3,0,0,0" />
 
                             <!--<CheckBox Content="{x:Static p:Resources.CheckDirectoryForFiles}"
                                   IsChecked="{Binding BlogFile.CheckDirectoryForFiles, Mode=TwoWay}" Grid.Column="0" Grid.ColumnSpan="2"
@@ -510,7 +541,7 @@
                         </CheckBox>-->
 
                             <CheckBox
-                                Grid.Row="18"
+                                Grid.Row="19"
                                 Grid.Column="0"
                                 Grid.ColumnSpan="5"
                                 Margin="3,0,0,0"
@@ -528,7 +559,7 @@
                             </CheckBox>
 
                             <CheckBox
-                                Grid.Row="20"
+                                Grid.Row="21"
                                 Grid.Column="0"
                                 Grid.ColumnSpan="5"
                                 Margin="3,0,0,0"
@@ -546,7 +577,7 @@
                             </CheckBox>
 
                             <CheckBox
-                                Grid.Row="22"
+                                Grid.Row="23"
                                 Grid.Column="0"
                                 Grid.ColumnSpan="5"
                                 Margin="3,0,0,0"
@@ -564,7 +595,7 @@
                             </CheckBox>
 
                             <CheckBox
-                                Grid.Row="24"
+                                Grid.Row="25"
                                 Grid.Column="0"
                                 Grid.ColumnSpan="5"
                                 Margin="3,0,0,0"
@@ -582,7 +613,7 @@
                             </CheckBox>
 
                             <CheckBox
-                                Grid.Row="26"
+                                Grid.Row="27"
                                 Grid.Column="0"
                                 Grid.ColumnSpan="5"
                                 Margin="3,0,0,0"
